# simple-3D-renderer

./: AffineTransform.h  CMakeLists.txt  Data.h  Matrix.h  README.txt  main.cpp  main2D.cpp  model1_edg.txt  model1_vert.txt
DOCs/: AffineTransform.java
Drawing/: Camera2D.h  Camera3D.h  Model2D.h  Model3D.h  Scene2D.h  Scene3D.h
Math/: AffineTransform.h  Matrix.h  vec3D.h
lib/: Gdi32.Lib
models/: 3Dmodel1_faces  3Dmodel1_vert  cross_faces  cross_im  cross_vert
